--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ html {
 }
 body {
   font-family: "Poppins", sans-serif;
-  background-color: #eee !important;
+  background-color: white !important;
   min-height: 100vh !important;
   
 }
