--- a/src/adminPanel/prdoucts/product.css
+++ b/src/adminPanel/prdoucts/product.css
@@ -282,13 +282,13 @@
     text-shadow: rgba(0, 0, 0, .01) 0 0 1px
 }
 
-body {
+/* body {
     font-family: 'Rubik', sans-serif;
     font-size: 14px;
     font-weight: 400;
     background: #FFFFFF;
     color: #000000
-}
+} */
 
 div {
     display: block;
