--- a/src/common/header/new.css
+++ b/src/common/header/new.css
@@ -1,6 +1,6 @@
 
 .shop-bag{
-    background-color:#198754;
+    background-color:#374151 !important;
     color:#fff;
     height:50px;
     width:50px;
@@ -13,6 +13,6 @@
 
 .qty{
     font-size:12px;
-    color: #198754;
+    color: #374151 !important;
     font-weight: 500;
 }
