--- a/src/components/ProductDetails/product.css
+++ b/src/components/ProductDetails/product.css
@@ -36,7 +36,7 @@
 .row-underline {
     content: "";
     display: block;
-    border-bottom: 2px solid seagreen !important;
+    border-bottom: 2px solid #374151 !important;
     margin: 0px 0px;
     margin-bottom: 20px;
     margin-top: 15px
@@ -56,7 +56,7 @@ body {
     font-family: 'Rubik', sans-serif;
     font-size: 14px;
     font-weight: 400;
-    background: #FFFFFF;
+    /* background: #FFFFFF; */
     color: #000000
 }
 
