--- a/src/components/ShopList/style.css
+++ b/src/components/ShopList/style.css
@@ -10,6 +10,9 @@
 .box {
     width: 100% !important;
 }
+.borderColor{
+    border-color: #374151 !important;
+}
 .productShadow:hover{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
