--- a/src/components/ProductDetails/product.css
+++ b/src/components/ProductDetails/product.css
@@ -2,23 +2,23 @@
     content: ">"
 }
 
-.companyHead{
+.companyHead {
     margin-right: 15rem !important;
 }
 
 .itemImage {
-    position:relative;
+    position: relative;
 }
 
-.notify-badge{
+.notify-badge {
     position: absolute;
-    right:-1px;
-    top:3px;
+    right: -1px;
+    top: 3px;
     text-align: center;
     border-radius: 30px 30px 30px 30px;
-    color:white;
-    padding:5px 10px;
-    font-size:20px;
+    color: white;
+    padding: 5px 10px;
+    font-size: 20px;
 }
 
 .single_product {
@@ -77,19 +77,57 @@ body {
 .img {
     margin-top: 20px;
 }
-.imageHover:hover{
+
+.imageHover:hover {
     cursor: pointer;
 }
-.img-thumbnail:hover{
-    background-color:thistle;
+
+.img-thumbnail:hover {
+    background-color: thistle;
 }
 
-.table-responsivedesTag{
+.table-responsivedesTag {
     height: 10rem !important;
 }
-.detailPageHeight{
+
+.detailPageHeight {
     min-height: 100vh !important;
 }
-.fontWeight{
+
+.fontWeight {
     font-size: 10px !important;
+}
+
+.score-average {
+    font-size: 42px;
+}
+
+.score-max {
+    font-size: 22px;
+    color: #9e9e9e;
+    text-align: center;
+    line-height: 40px;
+}
+
+.icon-style {
+    display: flex;
+    gap: 0.2rem;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.icon {
+    color: orange;
+}
+
+.empty-icon {
+    font-size: 2.6rem;
+}
+
+.commentsHeight{
+    height: 300px;
+}
+
+.ReviewHeight{
+    height: 500px;
 }
