--- a/src/common/footer/style.css
+++ b/src/common/footer/style.css
@@ -1,6 +1,11 @@
 .footer {
   background-color: #374151 !important;
 }
+footer {
+  box-shadow: 0px -3px 5px 0px rgba(0, 0, 0, 0.63);
+  -webkit-box-shadow: 0px -3px 5px 0px rgba(0, 0, 0, 0.63);
+  -moz-box-shadow: 0px -3px 5px 0px rgba(0, 0, 0, 0.63);
+}
 
 footer h1 {
   margin-bottom: 30px;
