--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -1,5 +1,8 @@
 .navbar{
-  background-color: #374151 !important;
+  /* background-color: #374151 !important; */
+  /* background-color: #71962F !important; */
+  background-color: #008080 !important;
+  
 }
 header {
   height: 8vh;
