--- a/src/common/header/new.css
+++ b/src/common/header/new.css
@@ -1,6 +1,7 @@
 
 .shop-bag{
-    background-color:#374151 !important;
+    /* background-color:#008080 !important; */
+    background-color:#FF7F4F !important;
     color:#fff;
     height:50px;
     width:50px;
@@ -13,6 +14,6 @@
 
 .qty{
     font-size:12px;
-    color: #374151 !important;
+    color: #FF7F4F !important;
     font-weight: 500;
 }
