--- a/src/components/ItemPage/style.css
+++ b/src/components/ItemPage/style.css
@@ -1,3 +1,20 @@
 .newCLass{
     min-height: 100vh;
 }
+.text-just{
+    color: #008080;
+}
+.border-hr {
+    color: #008080;
+}
+.main-btn-color {
+    background-color: #FF7F4F;
+    padding: 7px 15px;
+    color: white;
+    border: #FF7F4F;
+    border-radius: 5px;
+}
+.main-btn-color:hover {
+    background-color: rgb(255, 109, 56);
+
+}
