--- a/src/components/productCheckout/Checkout.css
+++ b/src/components/productCheckout/Checkout.css
@@ -6,3 +6,54 @@
 .table-responsive{
     height: 20rem !important;
 }
+.place-btn-color {
+    color: white;
+    background-color: #FF7F4F;
+    border-radius: 5px;
+    border: 1px solid #FF7F4F;
+    padding: 7px 0;
+}
+.place-btn-color:hover {
+    background-color: #FF7F4F;
+    color: white;
+}
+.address-btn {
+    color: #008080;
+    background-color: white;
+    border-radius: 5px;
+    border: 1px solid #008080;
+    padding: 7px 60px;
+}
+.address-btn:hover {
+    color: white;
+    background-color: #008080 !important;
+    border: 1px solid #008080 !important;
+}
+@media (max-width: 550px) {
+    .address-btn {
+      padding: 7px 40px;
+    }
+}
+@media (max-width: 496px) {
+    .address-btn {
+      padding: 7px 20px;
+    }
+}
+
+@media (max-width: 450px) {
+    .address-btn {
+      padding: 5px 10px;
+    }
+}
+
+@media (max-width: 430px) {
+    .address-btn {
+      padding: 5px 7px;
+    }
+}
+
+@media (max-width: 39px) {
+    .address-btn {
+      padding: 4px 5px;
+    }
+}
